# us-housing-regression

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: aws_data_push.ipynb  data_exploration.ipynb  model_exploration.ipynb
src/api/: main.py
src/batch/: run_monthly.py
src/feature_pipeline/: __init__.py  feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py
tests/: test_features.py  test_inference.py  test_training.py
