[project]
name = "us-housing-regression"
version = "0.1.0"
description = "US housing price regression model"
authors = [
    {name = "Minimartzz",email = "martin.ho.zy97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
