[project]
name = "us-housing-regression"
version = "0.1.0"
description = "US housing price regression model"
authors = [
    {name = "Minimartzz",email = "martin.ho.zy97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "category-encoders (>=2.9.0,<3.0.0)",
    "xgboost (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"

